<resources>
    <string name="app_name">HW0418</string>
    <string name="gender">性別</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="ticket">票種</string>
    <string name="adult">成人票（500)</string>
    <string name="child">孩童票（250)</string>
    <string name="student">學生票（400)</string>
    <string name="sheet">張數</string>
    <string name="quantity">數量</string>
    <string name="send">送出</string>

</resources>