<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:text="@string/gender"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <RadioGroup
        android:id="@+id/rdg_gender"
        android:layout_width="184dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender">

        <RadioButton
            android:id="@+id/rdb_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rdb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_ticket"
        android:layout_width="94dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/ticket"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg_gender" />

    <RadioGroup
        android:id="@+id/rdg_ticket"
        android:layout_width="178dp"
        android:layout_height="148dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ticket">

        <RadioButton
            android:id="@+id/rdb_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child" />

        <RadioButton
            android:id="@+id/rdb_adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adult" />

        <RadioButton
            android:id="@+id/rdb_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="219dp"
        android:layout_height="61dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="數量"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quantity" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/sheet"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg_ticket" />

    <Button
        android:id="@+id/send"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

</androidx.constraintlayout.widget.ConstraintLayout>